# motion_primitives_from_planned_trajectory

./: CMakeLists.txt  README.md  package.xml
data/: 20250626_1155_demo_PTP_prim_from_traj_cpp.webm  20250626_1156_demo_LIN_prim_from_traj_cpp.webm  20250626_1210_demo_obstacle_PTP_prim_from_traj_cpp.webm  20250626_1213_demo_obstacle_LIN_prim_from_traj_cpp.webm  trajectory_20250625_110936_planned.csv  trajectory_20250625_123217_planned.csv  trajectory_20250625_125211_planned.csv  trajectory_20250625_131108_planned.csv  trajectory_20250625_131223_planned.csv  trajectory_20250625_131236_planned.csv  trajectory_20250625_132125_planned.csv  trajectory_20250625_132900_planned.csv  trajectory_20250625_134607_planned.csv  trajectory_20250625_134642_planned.csv  trajectory_20250625_150658_planned.csv  trajectory_20250625_152156_planned.csv  trajectory_20250625_152447_planned.csv  trajectory_20250625_153530_planned.csv  trajectory_20250625_154205_planned.csv  trajectory_20250625_154249_planned.csv  trajectory_20250625_154320_planned.csv  trajectory_20250625_161504_planned.csv  trajectory_20250625_162401_executed.csv  trajectory_20250625_162401_planned.csv  trajectory_20250625_162740_executed.csv  trajectory_20250625_162740_planned.csv  trajectory_20250626_090827_executed.csv  trajectory_20250626_090827_planned.csv  trajectory_20250626_090827_reduced_PTP_joint.csv  trajectory_20250626_090958_executed.csv  trajectory_20250626_090958_planned.csv  trajectory_20250626_090958_reduced_LIN_cartesian.csv  trajectory_20250626_094227_executed.csv  trajectory_20250626_094227_planned.csv  trajectory_20250626_094227_reduced_PTP_joint.csv  trajectory_20250626_094324_executed.csv  trajectory_20250626_094324_planned.csv  trajectory_20250626_094324_reduced_PTP_joint.csv  trajectory_20250626_094408_executed.csv  trajectory_20250626_094408_planned.csv  (+78 more)
include/motion_primitives_from_planned_trajectory/: approx_primitives_with_rdp.hpp  execute_motion_client.hpp  fk_client.hpp  joint_state_logger.hpp  planned_trajectory_reader.hpp  pose_marker_visualizer.hpp  rdp.hpp  trajectory_utils.hpp
motion_primitives_from_planned_trajectory/: compare.py  compare_planned_and_executed_trajectory.py  compare_planned_and_reduced_points.py  fk_client.py
src/: approx_primitives_with_rdp.cpp  execute_motion_client.cpp  fk_client.cpp  joint_state_logger.cpp  planned_trajectory_reader.cpp  pose_marker_visualizer.cpp  process_trajectory_to_motion_primitives.cpp  rdp.cpp  test_approx_primitives_with_rdp.cpp  test_planned_trajectory_reader.cpp  test_rdp.cpp  trajectory_utils.cpp
